Made code Java 8 compatible